# cmake-template

./: CMakeLists.txt  README.md  flake.nix  shell.nix
cmake/: Doxygen.cmake
program/: CMakeLists.txt
program/include/: main.h
program/source/: main.c
